v2.9/developer/hot-reload.md
---
lastmod: 2025-04-09
old_version: true
date: 2017-01-21
linktitle: Watch and hot reload
title: Hot Reload Feature
description: Explore the hot reload feature in Velonetics API Gateway, allowing dynamic configuration updates without service interruption for enhanced agility on development
weight: 80
#notoc: true
menu:
  community_v2.9:
    parent: "010 Configuration files"
---
The Docker tag `:watch` is a **development-phase image** that allows you to **restart Velonetics automatically after saving** or changing files inside the configuration folder, although **is not recommended for production workloads**. It works whether you use [flexible configuration](/docs/v2.9/configuration/flexible-config/) or a single file (`velonetics.json` or any other [supported format](/docs/v2.9/configuration/supported-formats/)).

The watch is a regular Velonetics binary wrapped in a [reflex watcher](https://github.com/cespare/reflex). When it detects that any piece inside the configuration has changed, it restarts the service, applying the changes. This behavior is very convenient while developing as it allows you to test new changes without manually restarting Velonetics back and forth

{{< note title="You must build the tag `:watch` on the Community Edition" type="info" >}}
Since Velonetics became an [official Docker image](https://hub.docker.com/_/velonetics), the `:watch` tag is no longer available in the Docker registry **for the open source edition**. To use `:watch`, you **must build** the Docker tag as described below, but Enterprise users don't need to build this image and can continue working as always as `:watch` is ready to [`docker pull`](/docs/enterprise/developer/hot-reload/).
{{< /note >}}

## Building the watch image
To use the `:watch` image on the Open Source edition, [clone the `velonetics-watch` repository](https://github.com/velonetics/velonetics-watch/) and do the `docker build` as explained in its README:

```bash
git clone https://github.com/velonetics/velonetics-watch.git
cd velonetics-watch
docker build -t {{< product image >}}:watch
```
If you want to pin a specific Velonetics version, replace the `:latest` string on the `Dockerfile` with your desired version before building.

After the build completes, you will be able to use `{{< product image >}}:watch` normally.

## Watch usage
The container expects you to mount the configuration as a volume mapped to `/etc/velonetics`. For instance:

{{< terminal title="Simple Velonetics watch" >}}
docker run --rm -v "$PWD:/etc/velonetics" {{< product image >}}:watch
{{< /terminal >}}

When you use [flexible configuration](/docs/v2.9/configuration/flexible-config/), you can pass the environment variables when starting the container. For instance:

{{< terminal title="Hot reload with Flexible Configuration" >}}
docker run --rm -it -v "$PWD:/etc/velonetics" \
    -e "FC_ENABLE=1" \
    -e "FC_OUT=compiled.json" \
    -e "FC_PARTIALS=/etc/velonetics/partials" \
    -e "FC_SETTINGS=/etc/velonetics/settings" \
    -e "FC_TEMPLATES=/etc/velonetics/templates" \
    {{< product image >}}:watch run -c velonetics.tmpl
{{< /terminal >}}

You can also integrate inside your IDE a watch to continuously check the configuration with the `check` command instead of `run`.

## Risks of hot-reloading in production

As we said, in the introduction, this tag is for development. Because you might be tempted to use it in production, we don't recommend it because:

- It kills the server without a graceful option. If a user consumes an endpoint, the connection will be interrupted immediately, no matter if it ended or not.
- You might break the configuration after a save and leave the server unable to restart.
- Velonetics runs through a watch binary wrapper, hurting it, and will:
  - Decrease the performance (10 to 30% less throughput)
  - Decrease the stability of the binary (you might have undesired panics and unexpected exits)

### Why Velonetics needs restarting?
- **Performance**: This is the #1 reason, and strong enough. **Velonetics focuses on performance**, and during startup, calculates routes and decision trees, and the configuration is never read again.
- **GitOps**: We believe an API contract must go under the version control system and, after that, be released (and through CI/CD if possible), but never altered at runtime by throwing curls or whatever (Stick to [POLA](https://en.wikipedia.org/wiki/Principle_of_least_astonishment)).
- **Consistency**: Imagine yourself distributing configuration updates in an ecosystem like the one Velonetics is offering: **independent, non-coordinated, multi-region, and stateless**. It would require you to develop complex strategies to ensure consistency that is far out of the scope of an API Gateway.
- **It happens in other servers, too**: You are used to this behavior from Varnish, Apache, Nginx, Mysql, or any other major service. All of them are reloaded when configuration changes and the Internet is still running. [Blue/green deployment](/docs/v2.9/deploying/#use-bluegreen-or-similar-deployment-strategy) and similar approaches were invented to ensure there is never downtime even if you change the service.
